--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+# In order to access the database click on this link or type it in the browser: http://localhost:8080/h2-console
+spring.datasource.url=jdbc:h2:mem:ClothingWarehouse
+spring.datasource.generate-unique-name=false
